bug 106536 Blank charset list in SaveAs charset of HTML composer, r=cmanske, sr=hyatt